# dfconv

./: LICENSE  README.md  pyproject.toml
dfconv/: dfconv.py
src/dfconv/: __about__.py  __init__.py  dfconv.py
