[tool.poetry]
name = "dfconv"
version = "0.1.0"
description = ""
authors = ["Vinicius Monego <monego@posteo.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.3"
polars = "^0.19.16"
pyarrow = "^14.0.1"
xlsx2csv = "^0.8.1"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
