[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dfconv"
dynamic = ["version"]
description = 'Quickly convert between DataFrame formats'
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = []
authors = [
  { name = "Vinicius Monego", email = "monego@posteo.net" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "openpyxl",
  "pandas",
  "polars",
  "pyarrow",
  "xlsx2csv",
]

[project.urls]
Documentation = "https://github.com/monego/dfconv#README.md"
Issues = "https://github.com/monego/dfconv/issues"
Source = "https://github.com/monego/dfconv"

[tool.hatch.version]
path = "src/dfconv/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]

[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/dfconv tests}"

[tool.coverage.run]
source_pkgs = ["dfconv", "tests"]
branch = true
parallel = true
omit = [
  "src/dfconv/__about__.py",
]

[tool.coverage.paths]
dfconv = ["src/dfconv", "*/dfconv/src/dfconv"]
tests = ["tests", "*/dfconv/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
